fix gap on tips page

--- a/styles.css
+++ b/styles.css
@@ -848,7 +848,7 @@ textarea {
   display: grid;
   padding: 2rem;
   grid-template-columns: 300px 1fr;
-  gap: 1rem;
+  gap: 2rem;
   align-items: center;
   width: 100%;
   margin: 5% auto;
